2019-02-xx 1.11.0 [xxxxxxx]
2019-02-03 1.10.0 [9899988]
  + new classifier types for activity, state, Interaction-Overview and parametric diagrams
  + part, artifact, node and object are automatically underlined as instance
  + objects and parts are always instances
  . sqlite3 is linked dynamically
  + symbols for interruptable region, diagram reference, decision, fork, join, timeout, send-sig, rcv-event, history
2019-01-17 1.9.0 [43d5e15]
  + the database check can repair circular diagram-parent references
  + user experience improvements at using text-edit widgets
  + communication diagram does select/highlight classifiers in edit mode but lifelines in create mode
  . lifeline properties cannot be changed anymore
  + include, extends, deploy, manifest relationships show their stereotype
  + refine and trace relations exist for requirements
  + component interfaces are rendered as circle and half-circle
  + new label-positioning of ports
2019-01-01 1.8.0 [9dae9d7]
  + in navigation mode, diagrams can be re-ordered by dragging their names in the tree view
  . F7 workaround removed, key F7 is without function now
  + in edit mode, features can be re-ordered, ports can be moved along the classifier border
  + ids of diagrams and classifiers are shown
2018-11-21 1.7.1 [8ebf36a]
  . user-doc and manpages are generated from docbook now
  + doubleclick on .cfu1 files starts crystal_facet_uml
2018-11-01 1.7.0 [15274aa]
  + tree view allows to navigate interactively
  + new sibling and new child diagrams can be created in tree view
  + when deleting a diagram, unfocused windows show parent diagram
  + only local-scenario relationships are shown in timing, sequence and communication diagrams
2018-10-15 1.6.1 [3d25d8a]
  + debian archives are now build by dh_make and debuild
  + fix for only partly visible background text
2018-10-01 1.6.0 [4151f80]
  + element configuration moved from bottom area to the right of the window
  + tree view shows current diagram in hierarchy