@@ -26,37 +26,34 @@ void gui_file_export_dialog_init ( gui_file_export_dialog_t *this_,
                                                                  GTK_RESPONSE_CANCEL,
                                                                  "Export Files",
                                                                  GTK_RESPONSE_ACCEPT,
-                                                                 /*
-                                                                 "txt Files",
-                                                                 GUI_FILE_EXPORTER_CONST_EXPORT_TXT,
-                                                                 "svg Files",
-                                                                 GUI_FILE_EXPORTER_CONST_EXPORT_SVG,
-                                                                 "png Files",
-                                                                 GUI_FILE_EXPORTER_CONST_EXPORT_PNG,
-                                                                 "pdf Files",
-                                                                 GUI_FILE_EXPORTER_CONST_EXPORT_PDF,
-                                                                 "ps Files",
-                                                                 GUI_FILE_EXPORTER_CONST_EXPORT_PS,
-                                                                 */
                                                                  NULL
                                                                );
+    
     GtkWidget *content_area = gtk_dialog_get_content_area (GTK_DIALOG((*this_).export_file_chooser));
+    
+    /*
     (*this_).format_asciidoc = gtk_check_button_new_with_label ("asciidoc");
     (*this_).format_docbook = gtk_check_button_new_with_label ("docbook");
+    (*this_).format_doxygen = gtk_check_button_new_with_label ("doxygen");
     (*this_).format_latex = gtk_check_button_new_with_label ("latex");
     (*this_).format_rtf = gtk_check_button_new_with_label ("rtf");
+    (*this_).format_xhtml = gtk_check_button_new_with_label ("xhtml");
+    */
+    
     (*this_).format_pdf = gtk_check_button_new_with_label ("pdf");
     (*this_).format_png = gtk_check_button_new_with_label ("png");
     (*this_).format_ps = gtk_check_button_new_with_label ("ps");
     (*this_).format_svg = gtk_check_button_new_with_label ("svg");
     (*this_).format_txt = gtk_check_button_new_with_label ("txt");
-    (*this_).format_xhtml = gtk_check_button_new_with_label ("xhtml");
 
     (*this_).flowbox_diagram_set = GTK_FLOW_BOX( gtk_flow_box_new ());
+    /*
     (*this_).flowbox_document = GTK_FLOW_BOX( gtk_flow_box_new ());
+    */
 
-    (*this_).document_label = gtk_label_new ( "Documents:" );
     (*this_).diagram_set_label = gtk_label_new ( "Diagram-sets:" );
+    /*
+    (*this_).document_label = gtk_label_new ( "Documents (not yet implemented):" );
 #if (( GTK_MAJOR_VERSION == 3 ) && ( GTK_MINOR_VERSION >= 16 ))
     gtk_label_set_xalign (GTK_LABEL( (*this_).document_label ), 0.0 );
     gtk_label_set_xalign (GTK_LABEL( (*this_).diagram_set_label ), 0.0 );
@@ -64,14 +61,18 @@ void gui_file_export_dialog_init ( gui_file_export_dialog_t *this_,
     gtk_misc_set_alignment (GTK_MISC( (*this_).document_label ), 0.0, 0.0 );
     gtk_misc_set_alignment (GTK_MISC( (*this_).diagram_set_label ), 0.0, 0.0 );
 #endif
+    */
 
+    /*
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).document_label, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_asciidoc, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_docbook, -1 );
+    gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_doxygen, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_latex, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_rtf, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_document, (*this_).format_xhtml, -1 );
-
+    */
+    
     gtk_flow_box_insert ( (*this_).flowbox_diagram_set, (*this_).diagram_set_label, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_diagram_set, (*this_).format_pdf, -1 );
     gtk_flow_box_insert ( (*this_).flowbox_diagram_set, (*this_).format_png, -1 );
@@ -80,7 +81,9 @@ void gui_file_export_dialog_init ( gui_file_export_dialog_t *this_,
     gtk_flow_box_insert ( (*this_).flowbox_diagram_set, (*this_).format_txt, -1 );
 
     gtk_container_add ( GTK_CONTAINER(content_area), GTK_WIDGET( (*this_).flowbox_diagram_set ) );
+    /*
     gtk_container_add ( GTK_CONTAINER(content_area), GTK_WIDGET( (*this_).flowbox_document ) );
+    */
     /* no need to g_object_unref( content_area ); here */
 
     io_diagram_image_exporter_init( &((*this_).file_exporter), db_reader );
