@@ -115,8 +115,7 @@ void gui_simple_message_to_user_show_message_with_string ( gui_simple_message_to
                 utf8stringbuf_append_str( (*this_).content,
                                           "This is " META_INFO_PROGRAM_NAME_STR " version " META_INFO_VERSION_STR "\n"
                                           "Copyright: " META_INFO_COPYRIGHT_STR "\n"
-                                          "License: " META_INFO_LICENSE_STR "\n"
-                                          "Links to gtk3, sqlite3" 
+                                          "License: " META_INFO_LICENSE_STR
                                         );
             }
             break;
@@ -214,7 +213,7 @@ void gui_simple_message_to_user_show_message_with_string ( gui_simple_message_to
 
             case GUI_SIMPLE_MESSAGE_CONTENT_EXPORT_FINISHED:
             {
-                utf8stringbuf_append_str( (*this_).content, "Files exported, type: " );
+                utf8stringbuf_append_str( (*this_).content, "Files exported, format: " );
                 utf8stringbuf_append_str( (*this_).content, string_param );
             }
             break;
