@@ -12,15 +12,15 @@ void io_file_format_to_string( io_file_format_t format_set, utf8stringbuf_t out_
     int count = 0;
     utf8stringbuf_clear( out_fileformat );
 
-    if ( ( format_set & IO_FILE_FORMAT_SVG ) != 0 )
-    {
-        utf8stringbuf_append_str( out_fileformat, (count==0)?("svg"):(", svg") );
-        count ++;
-    }
-
     if ( ( format_set & IO_FILE_FORMAT_PDF ) != 0 )
     {
         utf8stringbuf_append_str( out_fileformat, (count==0)?("pdf"):(", pdf") );
+        count ++;
+    }
+
+    if ( ( format_set & IO_FILE_FORMAT_PNG ) != 0 )
+    {
+        utf8stringbuf_append_str( out_fileformat, (count==0)?("png"):(", png") );
         count ++;
     }
 
@@ -30,9 +30,9 @@ void io_file_format_to_string( io_file_format_t format_set, utf8stringbuf_t out_
         count ++;
     }
 
-    if ( ( format_set & IO_FILE_FORMAT_PNG ) != 0 )
+    if ( ( format_set & IO_FILE_FORMAT_SVG ) != 0 )
     {
-        utf8stringbuf_append_str( out_fileformat, (count==0)?("png"):(", png") );
+        utf8stringbuf_append_str( out_fileformat, (count==0)?("svg"):(", svg") );
         count ++;
     }
 
