@@ -1,4 +1,5 @@
 2019-02-xx 1.11.0 [xxxxxxx]
+  + export dialog allows to select multiple file formats
 2019-02-03 1.10.0 [9899988]
   + new classifier types for activity, state, Interaction-Overview and parametric diagrams
   + part, artifact, node and object are automatically underlined as instance
